--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "キセッペ Kiseppe",
     "description": "Kindle本の価格推移グラフを表示します (amazon.co.jp のみ対応)",
     "version": "1.0",
-    "homepage_url": "https://yapi.ta2o.net/kndlsl/",
+    "homepage_url": "https://yapi.ta2o.net/kndlsl/kiseppe/",
     "manifest_version": 3,
     "permissions": ["activeTab", "scripting", "storage"],
     "action": {
