--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
     "homepage_url": "https://yapi.ta2o.net/kndlsl/kiseppe/",
     "manifest_version": 3,
     "permissions": ["activeTab", "scripting", "storage"],
+    "icons": {
+	"16": "icon-16.png",
+	"48": "icon-48.png",
+	"128": "icon-128.png"
+    },
     "action": {
 	"default_icon": "icon-16.png"
     },
