--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Kiseppe - Price Chart for Amazon Japan Kindle",
     "description": "Adds price history charts to Amazon Japan Kindle book pages.  It works only on www.amazon.co.jp.",
-    "version": "1.0",
+    "version": "1.99",
     "homepage_url": "https://yapi.ta2o.net/kndlsl/kiseppe/",
     "manifest_version": 3,
     "icons": {
@@ -9,10 +9,11 @@
 	"48": "icon-48.png",
 	"128": "icon-128.png"
     },
-    "content_scripts": [
-	{
-	    "matches": ["https://www.amazon.co.jp/*"],
-	    "js": ["content-script.js"]
-	}
-    ]
+    "permissions": ["tabs", "scripting"],
+    "host_permissions": [
+	"https://www.amazon.co.jp/*"
+    ],
+    "background": {
+	"service_worker": "background.js"
+    }
 }
