--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -9,11 +9,13 @@
         "48": "icon-48.png",
         "128": "icon-128.png"
     },
-    "permissions": ["tabs", "scripting"],
-    "host_permissions": [
-        "https://www.amazon.co.jp/*"
-    ],
-    "background": {
-        "service_worker": "background.js"
-    }
+
+    "content_scripts": [
+	{
+	    "matches": [
+		"https://www.amazon.co.jp/*"
+	    ],
+	    "js": ["content-script.js"]
+	}
+    ]
 }
