--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,19 +1,35 @@
 {
     "name": "Kiseppe - Price Chart for Amazon Japan Kindle",
     "description": "Adds price history charts to Amazon Japan Kindle book pages.  It works only on www.amazon.co.jp.",
-    "version": "1.0",
+    "version": "1.99",
     "homepage_url": "https://yapi.ta2o.net/kndlsl/kiseppe/",
-    "manifest_version": 3,
     "browser_specific_settings": { "gecko": { "id": "kiseppe_ff@example.com" } },
+    "manifest_version": 3,
     "icons": {
-	"16": "icon-16.png",
-	"48": "icon-48.png",
-	"128": "icon-128.png"
+        "16": "icon-16.png",
+        "48": "icon-48.png",
+        "128": "icon-128.png"
     },
+    "permissions": [
+        "storage"
+    ],
     "content_scripts": [
-	{
-	    "matches": ["https://www.amazon.co.jp/*"],
-	    "js": ["content-script.js"]
-	}
-    ]
+        {
+            "matches": [
+                "https://www.amazon.co.jp/*"
+            ],
+            "js": [
+                "debug-message.js",
+                "content-script.js"
+            ],
+            "css": [
+                "debug-message.css",
+                "kiseppe.css"
+            ]
+        }
+    ],
+    "options_ui": {
+        "page": "options.html",
+        "open_in_tab": true
+    }
 }
