--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -12,6 +12,9 @@
     "permissions": [
         "storage"
     ],
+    "action": {
+        "default_popup": "options.html"
+    },
     "content_scripts": [
         {
             "matches": [
