reviewed by ChatGPT

--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -13,6 +13,10 @@
     "permissions": [
         "storage"
     ],
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'; connect-src https://www.listasin.net/api/;",
+        "content_scripts": "default-src 'self'; connect-src https://www.listasin.net/api/;"
+    },
     "action": {
         "default_popup": "options.html"
     },
